--- a/about.html
+++ b/about.html
@@ -27,11 +27,9 @@
             
             <b><p><a href="Marlene-Santos-Resume.pdf">Click to download resume</a></p></b>
 
-            <p>Marlene is a cartoonist in New York City. She loves creating vibrant art typically depicting non-human and abstract characters. Her use of colors and design makes her work expressive and approachable, and she believes that through making characters that don’t necessarily look like anyone, her art can resonate with almost everyone. Marlene is most interested in working in <b>storyboarding</b> and <b>animation</b>
+            <p>Marlene is an artist New York City. She loves creating vibrant art typically depicting non-human and abstract characters. Her use of colors and design makes her work expressive and approachable, and she believes that through making characters that don’t necessarily look like anyone, her art can resonate with almost everyone.
             </p>
             
-            <p>She is a member of the <a href="https://www.scopeofwork.co/" target="_blank"><b>Scope of Work 2024 cohort</b></a> and the <a href="https://cartoonist.coop/" target="_blank"><b>Cartoonist Cooperative</b></a>.</p>
-
             <p><b>Stay in Touch!</b><br>
                 <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/marlenesantos.com">Bluesky</a> • <a target="_blank" rel="noopener noreferrer" href="https://cara.app/marlenesantos">Cara</a> • <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/itsmarlenesantos/">Instagram</a> • <a target="_blank" rel="noopener noreferrer" href="https://ko-fi.com/marlenesantos">Ko-Fi</a> • <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/M_SantosArt">Twitter</a> • &nbsp;<a target="_blank" rel="noopener noreferrer" href="https://buttondown.email/marlenesantos/">Newsletter</a><br></p>
             itsmarlenesantos[at]gmail[dot]com</p>
