--- a/films.html
+++ b/films.html
@@ -30,11 +30,13 @@
 <div class="gallery storyboards">
 
     <h2>Weird Kids</h2>
+    <p><b>Official Selection: The ASIFA-East Animation Festival 2025</b></p>
     <p>A werewolf kid struggles to make friends.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/WiLI_6c_73c?si=OMK2fOrF4ERP6il1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <hr>
 
     <h2>Dog With OCD and Psychic Powers Too</h2>
+    <p><b>Best Character Designs: DUM-D Animation Festival 2024</b></p>
     <p>A dog fears for the worse</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/epTPGjGr5Dc?si=MYHQi4SsJo2k5gRV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
