--- a/films.html
+++ b/films.html
@@ -28,9 +28,14 @@
 
 <h1>Films</h1>
 <div class="gallery storyboards">
+<br>
+    <img src="assets/films/weird-kids-logo.png" alt="Weird Kids">
+    <p>
+        <b>Finalist: Best Animation - The CUNY Film Festival</b> <br>
+        <b>Finalist: Best Narrative - The CUNY Film Festival</b> <br>
+        <b>Official Selection: Student Film - The ASIFA-East Animation Festival 2025</b> <br>
+    </p>
 
-    <h2>Weird Kids</h2>
-    <p><b>Official Selection: The ASIFA-East Animation Festival 2025</b></p>
     <p>A werewolf kid struggles to make friends.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/WiLI_6c_73c?si=OMK2fOrF4ERP6il1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 <hr>
