--- a/index.html
+++ b/index.html
@@ -27,25 +27,35 @@
 
 
 <h1>Storyboards</h1>
-<div class="gallery storyboards">
+    <div class="gallery storyboards">
 
-    <h2>Butter Cat</h2>
-    <p>A hungry stray cat tries to get some toast from intelligent rats who want to use it for science.</p>
-    <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/70f8a2cd5c8f4c218b6a5a04c5ef1779" title="Butter Cat" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
+        <h2>Butter Cat</h2>
+        <p>A hungry stray cat tries to get some toast from intelligent rats who want to use it for science.</p>
+        <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/70f8a2cd5c8f4c218b6a5a04c5ef1779" title="Butter Cat" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
 
-<hr>
+    <hr>
 
-    <h2>Rendered in Real-Time</h2>
-    <p>A person tries to remember an important message from a passed friend, but the only recording of it was in a video tape destroyed by a recent fire.</p>
-    <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/b29ae97297574539bebc0940f5a3972d" title="Rendered in Real-Time" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
+        <h2>Rendered in Real-Time</h2>
+        <p>A person tries to remember an important message from a passed friend, but the only recording of it was in a video tape destroyed by a recent fire.</p>
+        <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/b29ae97297574539bebc0940f5a3972d" title="Rendered in Real-Time" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
 
-<hr>
+    <hr>
 
-    <h2>Running Late</h2>
-    <p>A gorgon is running late to a doctor's appointment.</p>
-    <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/5d76616e92a7480cbd95a4b63462945e" title="Running Late" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
+        <h2>Running Late</h2>
+        <p>A gorgon is running late to a doctor's appointment.</p>
+        <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/5d76616e92a7480cbd95a4b63462945e" title="Running Late" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
 
-</div>
+    </div>
+
+    <div class="gallery">
+        <h2>Figure Drawings</h2>
+
+        <img src="assets/sketchbook/IMG_6213.jpg">
+        <img src="assets/sketchbook/IMG_6217.jpg">
+        <img src="assets/sketchbook/IMG_6218.jpg">
+        <img src="assets/sketchbook/IMG_6219.jpg">
+
+    </div>
 
 <div class="writeFooter">
     <script src="js/footer.js" defer></script>
