--- a/films.html
+++ b/films.html
@@ -31,8 +31,8 @@
 <br>
     <img src="assets/films/weird-kids-logo.png" alt="Weird Kids">
     <p>
-        <b>Finalist: Best Animation - The CUNY Film Festival</b> <br>
-        <b>Finalist: Best Narrative - The CUNY Film Festival</b> <br>
+        <b>Runner-Up: FredFilms Animation: Undergraduate- The CUNY Film Festival 2025</b> <br>
+        <b>Finalist: Best Narrative: Undergraduate - The CUNY Film Festival 2025</b> <br>
         <b>Official Selection: Student Film - The ASIFA-East Animation Festival 2025</b> <br>
     </p>
 
