--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
     <div class="gallery">
         <h2>Figure Drawings</h2>
 
+        <img src="assets/sketchbook/GES_Draw_217.jpg">
         <img src="assets/sketchbook/IMG_6213.jpg">
         <img src="assets/sketchbook/IMG_6217.jpg">
+        <br>
         <img src="assets/sketchbook/IMG_6218.jpg">
         <img src="assets/sketchbook/IMG_6219.jpg">
 
