--- a/films.html
+++ b/films.html
@@ -29,6 +29,12 @@
 <h1>Films</h1>
 <div class="gallery storyboards">
 <br>
+    <img src="assets/films/rendered-in-real-time-logo.png" alt="Rendered in Real-Time">
+    <p>A cat tries to remember an important message from a passed friend, but the only recording of it was in a video tape destroyed by a recent fire.</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/gIfqwdNCgFs?si=jIFn0C9_1JdlfdsO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+<hr>
+
     <img src="assets/films/weird-kids-logo.png" alt="Weird Kids">
     <p>
         <b>Runner-Up: FredFilms Animation: Undergraduate- The CUNY Film Festival 2025</b> <br>
@@ -38,6 +44,7 @@
 
     <p>A werewolf kid struggles to make friends.</p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/WiLI_6c_73c?si=OMK2fOrF4ERP6il1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <hr>
 
     <h2>Dog With OCD and Psychic Powers Too</h2>
