--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div class="gallery">
         <h2>Figure Drawings</h2>
 
+        <img src="assets/sketchbook/GES_Draw_214.jpg">
         <img src="assets/sketchbook/GES_Draw_218.jpg">
         <img src="assets/sketchbook/GES_Draw_217.jpg">
         <img src="assets/sketchbook/IMG_6217.jpg">
