--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
     <div class="gallery">
         <h2>Figure Drawings</h2>
 
+        <img src="assets/sketchbook/GES_Draw_212.jpg">
+        <img src="assets/sketchbook/GES_Draw_219.jpg">
         <img src="assets/sketchbook/GES_Draw_213.jpg">
         <img src="assets/sketchbook/GES_Draw_214.jpg">
         <img src="assets/sketchbook/GES_Draw_217.jpg">
