--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             </p>
             
             <p><b>Stay in Touch!</b><br>
-                <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/marlenesantos.com">Bluesky</a> • <a target="_blank" rel="noopener noreferrer" href="https://cara.app/marlenesantos">Cara</a> • <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/itsmarlenesantos/">Instagram</a> • <a target="_blank" rel="noopener noreferrer" href="https://ko-fi.com/marlenesantos">Ko-Fi</a> • <a target="_blank" rel="noopener noreferrer" href="https://twitter.com/M_SantosArt">Twitter</a> • &nbsp;<a target="_blank" rel="noopener noreferrer" href="https://buttondown.email/marlenesantos/">Newsletter</a><br></p>
+                <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/marlenesantos.com">Bluesky</a> • <a target="_blank" rel="noopener noreferrer" href="https://cara.app/marlenesantos">Cara</a> • <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/itsmarlenesantos/">Instagram</a> • <a target="_blank" rel="noopener noreferrer" href="https://ko-fi.com/marlenesantos">Ko-Fi</a> • <a target="_blank" rel="noopener noreferrer" href="https://buttondown.email/marlenesantos/">Newsletter</a><br></p>
                 <b>hello@marlenesantos.com</b></p>
         </div>
     </div>
