--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <div class="gallery">
         <h2>Figure Drawings</h2>
-
+        <img src="assets/sketchbook/GES_Draw_209.jpg">
         <img src="assets/sketchbook/GES_Draw_212.jpg">
         <img src="assets/sketchbook/GES_Draw_219.jpg">
         <img src="assets/sketchbook/GES_Draw_213.jpg">
