--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
     <div class="gallery">
         <h2>Figure Drawings</h2>
+        <img src="assets/sketchbook/GES_Draw_233.jpg">
         <img src="assets/sketchbook/chickens.jpg">
         <img src="assets/sketchbook/GES_Draw_207.jpg">
         <img src="assets/sketchbook/GES_Draw_212.jpg">
