--- a/illustration.html
+++ b/illustration.html
@@ -30,7 +30,9 @@
 
 <h1>Illustration</h1>
 <div class="gallery illustration">
+    <img src="assets/illustration/The Adventurous Princess.png">
     <img src="assets/illustration/stretch-and-relax.png">
+    <img src="assets/illustration/Cat Dinner.png">
     <img src="assets/illustration/static-website.png">
     <img src="assets/illustration/3-year-anniversary.png">
     <img src="assets/illustration/le-chat-gros.png">
