--- a/index.html
+++ b/index.html
@@ -32,17 +32,16 @@
     <h2>Shopping Spree</h2>
     <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/321c061ee4744a6daad8f01d57193701" title="Shopping Spree" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
 
+    <h3>Thumbnails and other sketches for this sequence</h3>
+    <img src="assets/sketchbook/Shopping-1.jpg" width="200">
+    <img src="assets/sketchbook/Shopping-2.jpg" width="200">
+    <img src="assets/sketchbook/Shopping-3.jpg" width="200">
 
-    <hr>
 
-        <h2>Butter Cat</h2>
-        <p>A hungry stray cat tries to get some toast from intelligent rats who want to use it for science.</p>
-        <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/70f8a2cd5c8f4c218b6a5a04c5ef1779" title="Butter Cat" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
 
     <hr>
 
         <h2>Rendered in Real-Time</h2>
-        <p>A person tries to remember an important message from a passed friend, but the only recording of it was in a video tape destroyed by a recent fire.</p>
         <iframe class="speakerdeck-iframe" style="border: 0px; background: rgba(0, 0, 0, 0.1) padding-box; margin: 0px; padding: 0px; border-radius: 6px; box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 40px; width: 100%; height: auto; aspect-ratio: 560 / 432;" frameborder="0" src="https://speakerdeck.com/player/b29ae97297574539bebc0940f5a3972d" title="Rendered in Real-Time" allowfullscreen="true" data-ratio="1.2962962962962963"></iframe>
 
     </div>
