--- a/about.html
+++ b/about.html
@@ -23,12 +23,11 @@
     <h1>About</h1>
     <div class="gallery">
         <div class="bio">
-            
-            <b><p><a href="Marlene-Santos-Resume.pdf">Click to download resume</a></p></b>
-
-            <p>Marlene is an artist New York City. She loves creating vibrant art typically depicting non-human and abstract characters. Her use of colors and design makes her work expressive and approachable, and she believes that through making characters that don’t necessarily look like anyone, her art can resonate with almost everyone.
+            <p>✧･ﾟ: *✧･ﾟ:*:･ﾟ✧*:･ﾟ✧</p>
+            <p>Marlene is an artist who loves creating vibrant art typically depicting non-human and abstract characters. Her use of colors and design makes her work expressive and approachable, and she believes that through making characters that don’t necessarily look like anyone, her art can resonate with almost everyone.
             </p>
-            
+            <p>✧･ﾟ: *✧･ﾟ:*:･ﾟ✧*:･ﾟ✧</p>
+
             <p><b>Stay in Touch!</b><br>
                 <a target="_blank" rel="noopener noreferrer" href="https://bsky.app/profile/marlenesantos.com">Bluesky</a> • <a target="_blank" rel="noopener noreferrer" href="https://cara.app/marlenesantos">Cara</a> • <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/itsmarlenesantos/">Instagram</a> • <a target="_blank" rel="noopener noreferrer" href="https://ko-fi.com/marlenesantos">Ko-Fi</a> • <a target="_blank" rel="noopener noreferrer" href="https://buttondown.email/marlenesantos/">Newsletter</a><br></p>
                 <b>hello@marlenesantos.com</b></p>
